# ENGSCI_263_group_3_CM

./: .gitignore  Benchmarking.py  ODE_Model_Function.py  PressureConvert.py  README.md  analytic_solution.py  lab2.py  main.py  pyproject.toml  test_functions.py  visualisation.py  visualisations.ipynb
data/: gr_T.txt  gr_p.txt  gr_q1.txt  gr_q2.txt
ignore_me/: analytic_solution.py  lab2.py  lab2Josh.py  visualisations.ipynb
