[tool.poetry]
name = "engsci263group3cm"
version = "0.1.0"
description = ""
authors = ["SebastianThoma3 <<>>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
pandas = "^1.3.2"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
