[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["SebastianThoma3 <<>>"]
description = ""
name = "engsci263group3cm"
version = "0.1.0"
[tool.poetry.dependencies]
matplotlib = "^3.4.2"
numpy = "^1.21.1"
pandas = "^1.3.2"
python = "^3.8"
scipy = "^1.7.1"
pytest = "^6.2.5"
[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
[tool.poetry.dev-dependencies.black]
allow-prereleases = true
version = "^21.7b0"
